--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
 	background-image:url('../img/load.gif');
 	background-position: center;
 	background-repeat: no-repeat;
-	position: absolute !important;
+	position: fixed !important;
 	top:0;
 	left:0;
 	width:100%;
@@ -31,6 +31,7 @@
 html, body{
 	height: 100%;
 	font-family: 'OxygenMonoRegular';
+	overflow-x:hidden;
 }
 #wrap{
 	min-height:100%;
@@ -170,4 +171,17 @@ header nav ul a:hover{
     width: 100%; 
     max-width: 1920px; 
     position: relative;
+}
+#home article{ 
+  height: 100%; 
+  position: absolute;
+  width: 60%;
+  background-color:rgba(0, 102, 153, 0.7);
+}
+#about article{
+	height: 100%;
+	position:absolute;
+	width: 50%;
+	margin-right: -150px;
+	background-color:rgba(0, 102, 153, 0.7);
 }
